--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "api.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "mocha --timeout 10000",
         "start": "npx nodemon api.js"
     },
     "repository": {
@@ -15,7 +15,10 @@
     "license": "ISC",
     "devDependencies": {
         "babel-eslint": "^10.0.3",
+        "chai": "^4.2.0",
+        "chai-http": "^4.3.0",
         "eslint": "^6.8.0",
+        "mocha": "^7.0.1",
         "prettier": "^1.19.1"
     },
     "dependencies": {
