--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "api.js",
     "scripts": {
-        "test": "mocha --timeout 10000",
+        "test": "mocha --timeout 10000 --exit",
         "start": "npx nodemon api.js"
     },
     "repository": {
