--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "api.js",
     "scripts": {
-        "test": "mocha --timeout 10000 --exit",
-        "start": "npx nodemon api.js"
+        "test": "cross-env NODE_ENV=staging mocha --timeout 10000 --exit",
+        "start-dev": "cross-env NODE_ENV=development npx nodemon api.js"
     },
     "repository": {
         "type": "git",
@@ -17,6 +17,7 @@
         "babel-eslint": "^10.0.3",
         "chai": "^4.2.0",
         "chai-http": "^4.3.0",
+        "cross-env": "^7.0.0",
         "eslint": "^6.8.0",
         "mocha": "^7.0.1",
         "prettier": "^1.19.1"
