--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "api.js",
     "scripts": {
-        "test": "cross-env NODE_ENV=staging mocha --timeout 10000 --exit",
+        "test": "cross-env NODE_ENV=staging mocha ./test/index.js --timeout 10000 --exit",
         "start-dev": "cross-env NODE_ENV=development npx nodemon api.js"
     },
     "repository": {
