--- a/docs/serializers/config.yaml
+++ b/docs/serializers/config.yaml
@@ -43,6 +43,17 @@ components:
                 inventorySize:
                     type: integer
                     example: 7
+                flagVisibilityRadius:
+                    type: number
+                    format: decimal
+                    example: 1.5
+                flagActionRadius:
+                    type: number
+                    format: decimal
+                    example: 1.25
+                flagCaptureDuration:
+                    type: integer
+                    example: 60
                 createdAt:
                     type: string
                     format: date-time
@@ -74,6 +85,17 @@ components:
                 inventorySize:
                     type: integer
                     example: 7
+                flagVisibilityRadius:
+                    type: number
+                    format: decimal
+                    example: 1.5
+                flagActionRadius:
+                    type: number
+                    format: decimal
+                    example: 1.25
+                flagCaptureDuration:
+                    type: integer
+                    example: 60
                 createdAt:
                     type: string
                     format: date-time
