--- a/docs/serializers/flag.yaml
+++ b/docs/serializers/flag.yaml
@@ -3,6 +3,9 @@ components:
         Flag:
             type: object
             properties:
+                id: 
+                    type: integer
+                    example: 1
                 position:
                     type: object
                     example:
