--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "prettier": "^1.19.1"
     },
     "dependencies": {
+        "adm-zip": "^0.4.14",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
