Use doubles instead of decimals

--- a/docs/serializers/config.yaml
+++ b/docs/serializers/config.yaml
@@ -45,19 +45,19 @@ components:
                     example: 7
                 playerVisibilityRadius:
                     type: number
-                    format: decimal
+                    format: double
                     example: 3
                 playerActionRadius:
                     type: number
-                    format: decimal
+                    format: double
                     example: 2.75
                 flagVisibilityRadius:
                     type: number
-                    format: decimal
+                    format: double
                     example: 1.5
                 flagActionRadius:
                     type: number
-                    format: decimal
+                    format: double
                     example: 1.25
                 flagCaptureDuration:
                     type: integer
@@ -95,19 +95,19 @@ components:
                     example: 7
                 playerVisibilityRadius:
                     type: number
-                    format: decimal
+                    format: double
                     example: 3
                 playerActionRadius:
                     type: number
-                    format: decimal
+                    format: double
                     example: 2.75
                 flagVisibilityRadius:
                     type: number
-                    format: decimal
+                    format: double
                     example: 1.5
                 flagActionRadius:
                     type: number
-                    format: decimal
+                    format: double
                     example: 1.25
                 flagCaptureDuration:
                     type: integer
