--- a/docs/serializers/item_model.yaml
+++ b/docs/serializers/item_model.yaml
@@ -11,11 +11,11 @@ components:
                     example: mine
                 visibilityRadius:
                     type: number
-                    format: decimal
+                    format: double
                     example: 1.5
                 actionRadius:
                     type: number
-                    format: decimal
+                    format: double
                     example: 1.25
                 waitingPeriod:
                     type: integer
