--- a/docs/serializers/invitation.yaml
+++ b/docs/serializers/invitation.yaml
@@ -15,6 +15,40 @@ components:
                 GameId:
                     type: integer
                     example: 1
+        InvitationWithUser:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    example: 1
+                accepted:
+                    type: boolean
+                    example: true
+                UserId:
+                    type: integer
+                    example: 1
+                GameId:
+                    type: integer
+                    example: 1
+                User:
+                    $ref: '#/components/serializers/UserWithoutPassword'
+        InvitationWithGame:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    example: 1
+                accepted:
+                    type: boolean
+                    example: true
+                UserId:
+                    type: integer
+                    example: 1
+                GameId:
+                    type: integer
+                    example: 1
+                Game:
+                    $ref: '#/components/serializers/CreatedGame'
         NewInvitation:
             type: object
             properties:
